--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,4 @@
 jdk:
   - openjdk11
 install:
-  - ./gradlew clean -xtest assemble plugin:publishToMavenLocal
+  - ./gradlew clean -xtest assemble :plugin:publishToMavenLocal
